fixed a few things for enhanced compatibility on mobile devices

--- a/main.css
+++ b/main.css
@@ -11,6 +11,18 @@ html::-webkit-scrollbar {
     height: 100vh;
 }
 
+@media only screen and (max-width: 575.98px) {
+    .full-height {
+        height: 65vh;
+    }
+}
+
+@media only screen and (max-height: 298px) {
+    .full-height {
+        height: 320px;
+    }
+}
+
 .navbar-custom {
     min-height: 7%;;
 }
@@ -20,6 +32,7 @@ html::-webkit-scrollbar {
 }
 
 .hero-top-background {
+    padding-top: 0%;
     background-image:
         linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25)),
         url(./assets/heroImageKeyboard.jpg);
@@ -30,17 +43,6 @@ html::-webkit-scrollbar {
 .hero-title-bottom {
     margin-top: -7.2vw;
 }
-
-/* .hero-hover-effect {
-    color: rgb(5, 136, 188);
-    text-decoration: none;
-    transition: ease-in-out 120ms;
-}
-
-.hero-hover-effect:hover {
-    color: rgb(57, 195, 250);
-    text-decoration: none;
-} */
 
 .chevron-styles {
     color: rgba(5, 136, 188, 0.8);
@@ -53,7 +55,7 @@ html::-webkit-scrollbar {
 }
 
 .row-spacer-tall {
-    height: 8vw;
+    height: 8vh;
 }
 
 .row-spacer-md {
@@ -175,6 +177,10 @@ html::-webkit-scrollbar {
     background-color: rgba(0,0,0,.75);
 }
 
+.foot-content {
+    padding: 0rem 1rem;
+}
+
 .footer-hover-effect {
     color: rgba(253, 253, 253, 0.50);
     text-decoration: none;
@@ -219,4 +225,14 @@ html::-webkit-scrollbar {
 
 .fig-csharp {
     color: rgb(152, 82, 173);
+}
+
+@media screen 
+and (max-width: 280.5px) {
+    * {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
 }
